@@ -14,6 +14,7 @@ Open Vehicle Monitor System v3 - Change log
     xvu.c.timermode.def            -- Charge timer defined & default [bool]
 - New vehicle: Hyundai Ioniq vFL (HIONVFL)
   https://docs.openvehicles.com/en/latest/components/vehicle_hyundai_ioniqvfl/docs/index.html
+- Webserver: support TLS (https, wss) using self-signed certificates
 
 2021-03-05 MB  3.2.016  OTA release
 - VW e-Up: CCS (DC) charge detection & data
